# Trabalho-APA

./: Aresta.cpp  Aresta.h  ArvoreDeBuscaProfundidade.txt  CMakeLists.txt  Grafo.cpp  Grafo.h  GrafoFinal.txt  GrafosFinal.depend  No.cpp  No.h  main.cpp
include/: Aresta.h  Grafo.h  HeuristicaGulosa.h  No.h
src/: Aresta.cpp  Grafo.cpp  HeuristicaGulosa.cpp  No.cpp
